--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="css/popup.css" rel="stylesheet" type="text/css" />
-    <link href="css/nv.d3.css" rel="stylesheet" type="text/css" />
-    <link href="css/ol.css" rel="stylesheet" type="text/css" />
-    <link href="css/Nvd3.css" rel="stylesheet" type="text/css" />
+    <link href="dist/css/popup.css" rel="stylesheet" type="text/css" />
+    <link href="dist/css/nv.d3.css" rel="stylesheet" type="text/css" />
+    <link href="dist/css/ol.css" rel="stylesheet" type="text/css" />
+    <link href="dist/css/Nvd3.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="css/datepicker.min.css" rel="stylesheet" type="text/css" />
-    <link href="css/table.css" rel="stylesheet" type="text/css" />
-    <link href="css/MainMenu.css" rel="stylesheet" type="text/css" />
-    <link href="css/menuGis.css" rel="stylesheet" type="text/css" />
-
+    <link href="dist/css/datepicker.min.css" rel="stylesheet" type="text/css" />
+    <link href="dist/css/table.css" rel="stylesheet" type="text/css" />
+    <link href="dist/css/MainMenu.css" rel="stylesheet" type="text/css" />
+    <link href="dist/css/menuGis.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -34,7 +33,7 @@
     <div class="airMap">
         <div class="HeadMenu">
             <div class="AirDaysDirection">
-                <img src="pictures/arrow-white.png" id="Direction_Arrow" height="35px" width="35px" />
+                <img src="dist/pictures/arrow-white.png" id="Direction_Arrow" height="35px" width="35px" />
                 <div id="windspeed"></div>
                 <div id="timedisplay"></div>
             </div>
@@ -244,14 +243,14 @@
     </div>
 
     <script src="https://unpkg.com/dline@1.0.0/dist/dline.min.js"></script>
-    <script src="ol.js"></script>
+    <script src="dist/ol.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="datepicker.min.js"></script>
+    <script src="dist/datepicker.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js"></script>
-    <script src="nv.d3.js"></script>
-    <script src="Air.js"></script>
+    <script src="dist/nv.d3.js"></script>
+    <script src="dist/Air.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
